# LaserCouplingAlignment_ESP32

./: .gitignore  README.md
firmware/project_main_v2.0/: CMakeLists.txt  sdkconfig
firmware/project_main_v2.0/components/utils/: CMakeLists.txt
firmware/project_main_v2.0/components/web_server/: CMakeLists.txt  web_server.c
firmware/project_main_v2.0/components/web_server/handlers/: 404_handler.c  ctrl_handler.c  echo_handler.c  get_distance_handler.c  hello_handler.c
firmware/project_main_v2.0/components/web_server/include/: cors_utils.h  handlers.h  web_server.h
firmware/project_main_v2.0/components/web_server/static/: index.html
firmware/project_main_v2.0/main/: main.c
hardware/结构设计2.0/结构设计2.0/: 12V充电宝.SLDPRT  2.54-P4-L7.5.SLDPRT  2.54-P4-L8.5.SLDPRT  2.54-P6-L8.5.SLDPRT  2.54-P6.SLDPRT  20250116-01-测距单元外壳.SLDDRW  20250116-01-测距单元外壳.SLDPRT  20250116-02-安装板.SLDDRW  20250116-02-安装板.SLDPRT  20250116-03-反射镜架.SLDDRW  20250116-03-反射镜架.SLDPRT  20250116-03-反射镜架.STL  20250116-04-测距单元上盖.SLDDRW  20250116-04-测距单元上盖.SLDPRT  20250116-05-仪器固定板.SLDDRW  20250116-05-仪器固定板.SLDPRT  20250116-06-仪器调整板.SLDDRW  20250116-06-仪器调整板.SLDPRT  20250116-07-导光压板.SLDDRW  20250116-07-导光压板.SLDPRT  20250116-08-WIFI窗口.SLDDRW  20250116-08-WIFI窗口.SLDPRT  485模块.SLDPRT  5.08-P3-L7.5.SLDPRT  (+35 more)
software/my_network_tool/: main.py  requirements.txt  网络工具.spec
software/web_frontend/: index.html  style.css
software/web_frontend_vue/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+36 files in other folders)
